# qa-lang

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: build.yml
examples/: deepdive.qa  mycoollib.qa
src/: compiler.rs  config.rs  main.rs  preprocessor.rs
